2.64
  - switch to standard Maven toolchains.xml for cross-compilation, #169.
    See https://maven.apache.org/guides/mini/guide-using-toolchains.html
    for instructions on how to use it.

2.63
  - Include lambda-friendly callback methods on Handle and DBI, #156

2.62
  - Also include asm in shade, fixes build.  Sorry about the broken releases...

2.61 *** DO NOT USE ***
  - Fix shading broken in 2.60, fixes #152

2.60 *** DO NOT USE ***
  - Fix Javadoc generation for JDK6 and JDK8
  - Add support for /* */ style comments in statements
  - Add @BindMap annotation which allows parameters passed in a Map<String, Object>
  - Add support for running Script objects as individual statements rather than batch
  - Add support for default bind name based on argument position number (thanks @arteam)
  - Fix SqlObject connection leak through result iterator (thanks @pierre)
  - Switch to using cglib instead of cglib-nodep so we can pull ASM 5.0.2 which is Java 8 compatible
  - Classmate to 1.1.0

2.59
  - Fixes #137, broken ClasspathStatementLocator cache (thanks @HiJon89).
  - Recognize MySQL REPLACE statements

2.58
  - Identical to 2.57 except that the jar is correctly shaded.


2.57  *** DO NOT USE *** - Packaging for 2.57 was accidentially broken, use 2.58 instead.
                           Thanks to @HiJon89 for spotting the problem!
  - use Types.NULL for null objects (thanks @christophercurrie)
  - improve behavior on transactional autocommit (thanks @hawkan)
  - fix connection leak in on-demand sqlobject (thanks @pmaury)
  - code cleanups


2.54
  - fix cleanup bug when e.g. cleanupHandle was called multiple times
    on the same query.
  - Generic object binding uses specific type if value is non-null.


2.53
  - Tests now run in parallel
  - Added Template supergroup loading to StringTemplate3StatementLocator
  - add a global cache for templates loaded from an annotation.
  - fix a handler cache bug.

2.52
  - not released

2.51