@@ -15,19 +15,20 @@
  */
 package org.skife.jdbi.v2;
 
+import org.antlr.runtime.ANTLRStringStream;
+import org.antlr.runtime.Token;
 import org.skife.jdbi.v2.exceptions.UnableToExecuteStatementException;
 import org.skife.jdbi.v2.tweak.StatementLocator;
 
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Map;
-import java.util.regex.Pattern;
 
 /**
  * Represents a number of SQL statements which will be executed in a batch statement.
  */
 public class Script
 {
-
-    private static final Pattern WHITESPACE_ONLY = Pattern.compile("^\\s*$");
 
     private Handle handle;
     private final StatementLocator locator;
@@ -47,15 +48,11 @@ public class Script
      *
      * @return an array of ints which are the results of each statement in the script
      */
-    public int[] execute()
-    {
-        final String[] statements = getStatements();
+    public int[] execute() {
+        final List<String> statements = getStatements();
         Batch b = handle.createBatch();
-        for (String s : statements)
-        {
-            if ( ! WHITESPACE_ONLY.matcher(s).matches() ) {
-                b.add(s);
-            }
+        for (String s : statements) {
+            b.add(s);
         }
         return b.execute();
     }
@@ -65,24 +62,41 @@ public class Script
      */
     public void executeAsSeparateStatements() {
         for (String s : getStatements()) {
-            if (!WHITESPACE_ONLY.matcher(s).matches()) {
-                handle.execute(s);
-            }
+            handle.execute(s);
         }
     }
 
-    private String[] getStatements() {
+    private List<String> getStatements() {
         final String script;
         final StatementContext ctx = new ConcreteStatementContext(globalStatementAttributes);
-        try
-        {
+        try {
             script = locator.locate(name, ctx);
-        }
-        catch (Exception e)
-        {
+        } catch (Exception e) {
             throw new UnableToExecuteStatementException(String.format("Error while loading script [%s]", name), e, ctx);
         }
 
-        return script.replaceAll("\n", " ").replaceAll("\r", "").split(";");
+        return splitToStatements(script);
+    }
+
+    private List<String> splitToStatements(String script) {
+        final List<String> statements = new ArrayList<String>();
+        String lastStatement = new SqlScriptParser(new SqlScriptParser.TokenHandler() {
+            @Override
+            public void handle(Token t, StringBuilder sb) {
+                addStatement(sb.toString(), statements);
+                sb.setLength(0);
+            }
+        }).parse(new ANTLRStringStream(script));
+        addStatement(lastStatement, statements);
+
+        return statements;
+    }
+
+    private void addStatement(String statement, List<String> statements) {
+        String trimmedStatement = statement.trim();
+        if (trimmedStatement.isEmpty()) {
+            return;
+        }
+        statements.add(trimmedStatement);
     }
 }
